--- a/client/index.html
+++ b/client/index.html
@@ -16,8 +16,21 @@
     <link href="css/main.css" rel="stylesheet">
     <link href="css/jquery.rating.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
+    <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
     <script>
-        var app = angular.module('myApp', []);
+        var app = angular.module('myApp', ['ngRoute']);
+        app.config(['$routeProvider', function($routeProvider) {
+            $routeProvider.
+            when('/main', {
+                templateUrl: 'main.html'
+            }).
+            when('/product', {
+                templateUrl: 'product.html'
+            }).
+            otherwise({
+                redirectTo: '/main';
+            });
+        }]);
         app.controller('CtrlCategory', function($scope, $http) {
             $http.get('/api/categories/')
                 .then(function successCallback(response) {
@@ -40,9 +53,9 @@
 
 </head>
 
-<body ng-app="myApp">
+<body>
 
-    <div class="container">
+    <div ng-app="myApp" class="container">
         <div class="row">
             <!-- start header -->
             <div class="span4 logo">
@@ -99,7 +112,7 @@
                             <div class="nav-collapse">
                                 <ul class="nav">
                                     <li class="dropdown">
-                                        <a href="category.html" class="dropdown-toggle" data-toggle="dropdown">Desktops <b class="caret"></b></a>
+                                        <a href="#test" class="dropdown-toggle" data-toggle="dropdown">Desktops <b class="caret"></b></a>
                                         <ul class="dropdown-menu">
                                             <li><a href="listings.html">PC</a></li>
                                             <li><a href="listings.html">Mac</a></li>
@@ -110,7 +123,7 @@
                                         </ul>
                                     </li>
                                     <li ng-repeat="category in categories">
-                                        <a href="#">{{category.name}}</a>
+                                        <a href="#test">{{category.name}}</a>
                                     </li>
 
                                 </ul>
@@ -156,101 +169,104 @@
                 </div>
                 <!-- end sidebar -->
             </div>
-            <div class="span9">
-                <ul class="breadcrumb">
-                    <li>
-                        <a href="#">Home</a> <span class="divider">/</span>
-                    </li>
-                    <li>
-                        <a href="listings.html">Desktops</a> <span class="divider">/</span>
-                    </li>
-                    <li class="active">
-                        <a href="category.html">Mac</a>
-                    </li>
-                </ul>
-
-
-                <div class="row">
-                    <div class="span1">
-                        <a href="product.html"><img alt="" id="tmp" src="css/images/ipodtouch_image2_20080909.jpg"></a>
-                    </div>
-
-                    <div class="span6">
-                        <a href="product.html"><h5>iPod Touch</h5></a>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    </div>
-
-                    <div class="span1">
-                        <p>$587.50</p>
-                    </div>
-
-                    <div class="span2">
-                        <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
-                        <p><a class="" href="#">Add to Wish List</a></p>
-                        <p><a class="" href="compare.html">Add to Compare</a></p>
-                    </div>
-                </div>
-                <hr />
-                <div class="row">
-                    <div class="span1">
-                        <a href="product.html"><img alt="" src="css/images/ipodtouch_image2_20080909.jpg"></a>
-                    </div>
-
-                    <div class="span6">
-                        <a href="product.html"><h5>iPod Touch</h5></a>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    </div>
-
-                    <div class="span1">
-                        <p>$587.50</p>
-                    </div>
-
-                    <div class="span2">
-                        <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
-                        <p><a class="" href="#">Add to Wish List</a></p>
-                        <p><a class="" href="compare.html">Add to Compare</a></p>
-                    </div>
-                </div>
-                <hr />
-                <div class="row">
-                    <div class="span1">
-                        <a href="product.html"><img alt="" src="css/images/ipodtouch_image2_20080909.jpg"></a>
-                    </div>
-
-                    <div class="span6">
-                        <a href="product.html"><h5>iPod Touch</h5></a>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                    </div>
-
-                    <div class="span1">
-                        <p>$587.50</p>
-                    </div>
-
-                    <div class="span2">
-                        <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
-                        <p><a class="" href="#">Add to Wish List</a></p>
-                        <p><a class="" href="compare.html">Add to Compare</a></p>
-                    </div>
-                </div>
-                <hr />
-
-
-
-
-                <div class="pagination">
-                    <ul>
-                        <li><a href="#">Prev</a></li>
-                        <li class="active">
-                            <a href="#">1</a>
+            <div ng-view></div>
+            <script type="text/ng-template" id="test.html">
+                <div class="span9">
+                    <ul class="breadcrumb">
+                        <li>
+                            <a href="#">Home</a> <span class="divider">/</span>
                         </li>
-                        <li><a href="#">2</a></li>
-                        <li><a href="#">3</a></li>
-                        <li><a href="#">4</a></li>
-                        <li><a href="#">Next</a></li>
+                        <li>
+                            <a href="listings.html">Desktops</a> <span class="divider">/</span>
+                        </li>
+                        <li class="active">
+                            <a href="category.html">Mac</a>
+                        </li>
                     </ul>
-                </div>
 
-            </div>
+
+                    <div class="row">
+                        <div class="span1">
+                            <a href="product.html"><img alt="" id="tmp" src="css/images/ipodtouch_image2_20080909.jpg"></a>
+                        </div>
+
+                        <div class="span6">
+                            <a href="product.html"><h5>iPod Touch</h5></a>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                        </div>
+
+                        <div class="span1">
+                            <p>$587.50</p>
+                        </div>
+
+                        <div class="span2">
+                            <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
+                            <p><a class="" href="#">Add to Wish List</a></p>
+                            <p><a class="" href="compare.html">Add to Compare</a></p>
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="row">
+                        <div class="span1">
+                            <a href="product.html"><img alt="" src="css/images/ipodtouch_image2_20080909.jpg"></a>
+                        </div>
+
+                        <div class="span6">
+                            <a href="product.html"><h5>iPod Touch</h5></a>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                        </div>
+
+                        <div class="span1">
+                            <p>$587.50</p>
+                        </div>
+
+                        <div class="span2">
+                            <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
+                            <p><a class="" href="#">Add to Wish List</a></p>
+                            <p><a class="" href="compare.html">Add to Compare</a></p>
+                        </div>
+                    </div>
+                    <hr />
+                    <div class="row">
+                        <div class="span1">
+                            <a href="product.html"><img alt="" src="css/images/ipodtouch_image2_20080909.jpg"></a>
+                        </div>
+
+                        <div class="span6">
+                            <a href="product.html"><h5>iPod Touch</h5></a>
+                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+                        </div>
+
+                        <div class="span1">
+                            <p>$587.50</p>
+                        </div>
+
+                        <div class="span2">
+                            <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
+                            <p><a class="" href="#">Add to Wish List</a></p>
+                            <p><a class="" href="compare.html">Add to Compare</a></p>
+                        </div>
+                    </div>
+                    <hr />
+
+
+
+
+                    <div class="pagination">
+                        <ul>
+                            <li><a href="#">Prev</a></li>
+                            <li class="active">
+                                <a href="#">1</a>
+                            </li>
+                            <li><a href="#">2</a></li>
+                            <li><a href="#">3</a></li>
+                            <li><a href="#">4</a></li>
+                            <li><a href="#">Next</a></li>
+                        </ul>
+                    </div>
+
+                </div>
+            </script>
         </div>
         <footer>
             <hr />
