--- a/client/index.html
+++ b/client/index.html
@@ -17,21 +17,22 @@
     <link href="css/jquery.rating.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src="js/helper.js"></script>
     <script>
         var app = angular.module('myApp', ['ngRoute']);
-        app.config(['$routeProvider', function($routeProvider) {
-            $routeProvider.
-            when('/main', {
-                templateUrl: 'main.html'
-            }).
-            when('/product', {
-                templateUrl: 'product.html',
-                controller: 'CtrlProduct'
-            }).
-            otherwise({
-                redirectTo: '/main'
-            });
-        }]);
+        // app.config(['$routeProvider', function($routeProvider) {
+        //     $routeProvider.
+        //     when('/main', {
+        //         templateUrl: 'main.html'
+        //     }).
+        //     when('/product', {
+        //         templateUrl: 'product.html',
+        //         controller: 'CtrlProduct'
+        //     }).
+        //     otherwise({
+        //         redirectTo: '/main'
+        //     });
+        // }]);
         app.controller('CtrlProduct', function($scope, $http) {
             $http.get('/api/products')
                 .then(function successCallback(response) {
@@ -74,195 +75,14 @@
     <div ng-app="myApp" class="container">
         <div ng-include="'/layout/header.html'"></div>
 
-        <div class="row" ng-controller="CtrlCategory">
-            <!-- start nav -->
-            <div class="span12">
-                <div class="navbar">
-                    <div class="navbar-inner">
-                        <div class="container" style="width: auto;">
-                            <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-                                <span class="icon-bar"></span>
+        <div ng-include="'/layout/navbar.html'"></div>
 
-                                <span class="icon-bar"></span>
-                                <span class="icon-bar"></span>
-                            </a>
-                            <div class="nav-collapse">
-                                <ul class="nav">
-                                    <li class="dropdown">
-                                        <a href="#product" class="dropdown-toggle" data-toggle="dropdown">Desktops <b class="caret"></b></a>
-                                        <ul class="dropdown-menu">
-                                            <li><a href="listings.html">PC</a></li>
-                                            <li><a href="listings.html">Mac</a></li>
-                                            <li class="divider"></li>
-                                            <li class="nav-header">Accessories</li>
-                                            <li><a href="listings.html">Keyboard</a></li>
-                                            <li><a href="listings.html">Speakers</a></li>
-                                        </ul>
-                                    </li>
-                                    <li ng-repeat="category in categories">
-                                        <a href="#product/0/{{category.name}}">{{category.name}}</a>
-                                    </li>
+        <div class="row">
+            <div ng-include="'/layout/sidebar.html'"></div>
+            <!--<div ng-include="'/layout/productlist.html'"></div>-->
 
-                                </ul>
-
-                                <ul class="nav pull-right">
-                                    <li class="divider-vertical"></li>
-                                    <form class="navbar-search" action="#">
-                                        <input type="text" class="search-query span2" placeholder="Search">
-                                        <button class="btn btn-primary btn-small search_btn" type="submit">Go</button>
-                                    </form>
-
-                                </ul>
-                            </div>
-                            <!-- /.nav-collapse -->
-                        </div>
-                    </div>
-                    <!-- /navbar-inner -->
-                </div>
-                <!-- /navbar -->
-            </div>
         </div>
-        <!-- end nav -->
-        <div class="row" ng-controller="CtrlCategory">
-            <div class="span3">
-                <!-- start sidebar -->
-                <ul class="breadcrumb">
-                    <li>Categories</span>
-                    </li>
-                </ul>
-                <div class="span3 product_list">
-                    <ul class="nav">
-                        <li>
-                            <a class="active" href="category.html">Desktops (12)</a>
-                            <ul>
-                                <li><a href="listings.html"> - PC (11)</a></li>
-                                <li><a class="active" href="listings.html"> - Mac (1)</a></li>
-                            </ul>
-                        </li>
-                        <li ng-repeat="category in categories">
-                            <a href="#product?category={{category.name}}" ng-click="selectCategory(category.name)">{{category.name}}</a>
-                        </li>
-                    </ul>
-                </div>
-                <!-- end sidebar -->
-            </div>
-            <div ng-view></div>
-            <script type="text/ng-template" id="main.html">
-            </script>
-            <script type="text/ng-template" id="product.html">
-                <div class="span9">
-                    <ul class="breadcrumb">
-                        <li>
-                            <a href="#">Home</a> <span class="divider">/</span>
-                        </li>
-                        <li class="active">
-                            <a href="#{{category}}">{{category}}</a>
-                        </li>
-                    </ul>
-
-
-                    <div class="row">
-                        <div class="span1">
-                            <a href="product.html"><img alt="" id="tmp" src="css/images/ipodtouch_image2_20080909.jpg"></a>
-                        </div>
-
-                        <div class="span6">
-                            <a href="product.html"><h5>iPod Touch</h5></a>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                        </div>
-
-                        <div class="span1">
-                            <p>$587.50</p>
-                        </div>
-
-                        <div class="span2">
-                            <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
-                            <p><a class="" href="#">Add to Wish List</a></p>
-                            <p><a class="" href="compare.html">Add to Compare</a></p>
-                        </div>
-                    </div>
-                    <div ng-repeat="product in products" class="row">
-                        <div class="span1">
-                            <a href="product.html"><img alt="{{product.name}}" id="tmp" src="css/images/{{product.thumbnail}}"></a>
-                        </div>
-
-                        <div class="span6">
-                            <a href="product.html"><h5>{{product.name}}</h5></a>
-                            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
-                        </div>
-
-                        <div class="span1">
-                            <p>{{product.price|currency}}</p>
-                        </div>
-
-                        <div class="span2">
-                            <p><a class="btn btn-primary" href="cart.html">Add to cart</a></p>
-                            <p><a class="" href="#">Add to Wish List</a></p>
-                            <p><a class="" href="compare.html">Add to Compare</a></p>
-                        </div>
-                    </div>
-                    <hr />
-
-
-
-
-                    <div class="pagination">
-                        <ul>
-                            <li><a href="#">Prev</a></li>
-                            <li class="active">
-                                <a href="#">1</a>
-                            </li>
-                            <li><a href="#">2</a></li>
-                            <li><a href="#">3</a></li>
-                            <li><a href="#">4</a></li>
-                            <li><a href="#">Next</a></li>
-                        </ul>
-                    </div>
-
-                </div>
-            </script>
-        </div>
-        <footer>
-            <hr />
-            <div class="row well no_margin_left">
-
-                <div class="span3">
-                    <h4>Information</h4>
-                    <ul>
-                        <li><a href="two-column.html">About Us</a></li>
-                        <li><a href="typography.html">Delivery Information</a></li>
-                        <li><a href="typography.html">Privacy Policy</a></li>
-                        <li><a href="typography.html">Terms &amp; Conditions</a></li>
-                    </ul>
-                </div>
-                <div class="span3">
-                    <h4>Customer Service</h4>
-                    <ul>
-                        <li><a href="contact.html">Contact Us</a></li>
-                        <li><a href="typography.html">Returns</a></li>
-                        <li><a href="typography.html">Site Map</a></li>
-                    </ul>
-                </div>
-                <div class="span3">
-                    <h4>Extras</h4>
-                    <ul>
-                        <li><a href="typography.html">Brands</a></li>
-                        <li><a href="typography.html">Gift Vouchers</a></li>
-                        <li><a href="typography.html">Affiliates</a></li>
-                        <li><a href="typography.html">Specials</a></li>
-                    </ul>
-                </div>
-                <div class="span2">
-                    <h4>My Account</h4>
-                    <ul>
-                        <li><a href="my_account.html">My Account</a></li>
-                        <li><a href="typography.html">Order History</a></li>
-                        <li><a href="typography.html">Wish List</a></li>
-                        <li><a href="typography.html">Newsletter</a></li>
-                    </ul>
-                </div>
-            </div>
-
+        <footer ng-include="'/layout/footer.html'">
         </footer>
 
     </div>
