--- a/client/listings.html
+++ b/client/listings.html
@@ -17,21 +17,9 @@
     <link href="css/jquery.rating.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src="js/helper.js"></script>
     <script>
         var app = angular.module('myApp', ['ngRoute']);
-        var helper = {
-            name: 'helper',
-            getUrlVars: function() {
-                var vars = {},
-                    hashes;
-                hashes = location.search.substring(1).split('&');
-                for (var i = 0; i < hashes.length; i++) {
-                    hash = hashes[i].split('=');
-                    vars[hash[0]] = hash[1];
-                }
-                return vars;
-            }
-        };
         app.controller('CtrlProduct', function($scope, $http) {
             var urlvars = helper.getUrlVars();
             if (urlvars.category) {
