--- a/client/product.html
+++ b/client/product.html
@@ -17,23 +17,45 @@
     <link href="css/jquery.rating.css" rel="stylesheet">
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js"></script>
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular-route.min.js"></script>
+    <script src="js/helper.js"></script>
     <script>
         var app = angular.module('myApp', ['ngRoute']);
-        var helper = {
-            name: 'helper',
-            getUrlVars: function() {
-                var vars = {},
-                    hashes;
-                hashes = location.search.substring(1).split('&');
-                for (var i = 0; i < hashes.length; i++) {
-                    hash = hashes[i].split('=');
-                    vars[hash[0]] = hash[1];
-                }
-                return vars;
-            }
-        };
         app.controller('CtrlProduct', function($scope, $http) {
             var urlvars = helper.getUrlVars();
+            $scope.reviewDefault = {
+                stars: "1",
+                author: "",
+                comment: ""
+            };
+            $scope.resetFormReview = function() {
+                $scope.review = angular.copy($scope.reviewDefault);
+            }
+            $scope.resetFormReview();
+            $scope.addReview = function() {
+                console.log($scope.review);
+                $http.post('/api/products/' + urlvars.id + '/reviews', $scope.review)
+                    .then(function successCallback(response) {
+                        $http.get('/api/products/' + urlvars.id + '/reviews')
+                            .then(function successCallback(response) {
+                                    if (response.data) {
+                                        $scope.productreviews = response.data;
+                                    }
+                                },
+                                function errorCallback(response) {
+
+                                })
+                            .finally(function() {
+                                console.log('get product reviews');
+                            });
+                    })
+                    .then(function errorCallback(response) {
+                        console.log('There is error');
+                    })
+                    .finally(function() {
+                        console.log('add review');
+                    })
+                $scope.resetFormReview();
+            };
             if (urlvars.category) {
                 $scope.category = urlvars.category;
             }
@@ -63,6 +85,18 @@
                         })
                     .finally(function() {
                         console.log('get product detail');
+                    });
+                $http.get('/api/products/' + urlvars.id + '/reviews')
+                    .then(function successCallback(response) {
+                            if (response.data) {
+                                $scope.productreviews = response.data;
+                            }
+                        },
+                        function errorCallback(response) {
+
+                        })
+                    .finally(function() {
+                        console.log('get product reviews');
                     });
             }
         });
